@@ -1,5 +1,9 @@
 2008-02-14  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed warning.
+
+2008-02-14  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/gui.stetic, MonoDevelop.SourceEditor/SourceEditorView.cs: Changed
 	  delete call.
 
